k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-app-deployment
  namespace: "2401034"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loan-app
  template:
    metadata:
      labels:
        app: loan-app
    spec:
      imagePullSecrets:
        - name: nexus-secret

      containers:
        - name: loan-app
          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401034-project/loan-app-2401034-v2:latest
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30

          volumeMounts:
            - name: static-volume
              mountPath: /app/static

          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

      volumes:
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-pvc

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-app-ingress
  namespace: "2401034"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: loan.imcc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loan-app-service
                port:
                  number: 8000
